Made header fixed. Not responsive.

--- a/css/styles.css
+++ b/css/styles.css
@@ -409,15 +409,13 @@ footer p {
 
 .colophon {
   padding: 0;
+  margin-top: 40px
 }
 
 .colophon img {
-  /*height: 100%;*/
   width: 960px;
   margin-left: -40px;
-  overflow: hidden;
-  /*margin: auto -5%;*/
-  /*padding: 60px 0 10px;*/
+  margin-bottom: 10px;
 }
 
 .colophon p {
@@ -430,6 +428,6 @@ footer p {
 --- MEDIA QUERIES ---
 /*******************************************/
 
-/*@media screen and (min-width: 320px) {
+/*@media screen and (max-width: 780px) {
 
 }*/
